--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -72,6 +72,7 @@
         <option value="fadeIn">Fade In</option>
         <option value="fadeOut">Fade Out</option>
         <option value="reverse">Reverse</option>
+        <option value="resample">Resample</option>
       </select>
     </div>
     <button id="jam">Listen</button>
