Add filter effects

--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -73,6 +73,13 @@
         <option value="fadeOut">Fade Out</option>
         <option value="reverse">Reverse</option>
         <option value="resample">Resample</option>
+        <optgroup label="Filter">
+          <option value="lowpass">Lowpass</option>
+          <option value="highpass">Highpass</option>
+          <option value="bandpass">Bandpass</option>
+          <option value="notch">Notch</option>
+          <option value="allpass">Allpass</option>
+        </optgroup>
       </select>
     </div>
     <button id="jam">Listen</button>
