--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -78,7 +78,11 @@
           <option value="highpass">Highpass</option>
           <option value="bandpass">Bandpass</option>
           <option value="notch">Notch</option>
-          <option value="allpass">Allpass</option>
+        </optgroup>
+        <optgroup label="EQ">
+          <option value="lowshelf">Lowshelf</option>
+          <option value="highshelf">Highshelf</option>
+          <option value="peaking">Peaking</option>
         </optgroup>
       </select>
     </div>
