Allow building app with version string

--- a/templates/AppMain.html
+++ b/templates/AppMain.html
@@ -22,6 +22,8 @@
       <file-toolbar></file-toolbar>
       <div class="vspace"></div>
       <module-properties></module-properties>
+      <div class="flex-grow"></div>
+      <em>Version:&nbsp;<span id="version"></span></em>
     </div>
     <div id="sequence" class="vflex flex-grow hide">
       <sequence-edit></sequence-edit>
