Show sample playback preview

--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -31,7 +31,7 @@
     </div>
 
     <div id="waveEdit" class="vflex wave-edit">
-      <div class="vflex wave-container">
+      <div id="waveContainer" class="vflex wave-container">
         <canvas id="wavePreview" width="1024" height="256"></canvas>
         <div id="selectMarkA" class="wave-mark wave-select hide"></div>
         <div id="selectMarkB" class="wave-mark wave-select hide"></div>
