--- a/templates/dialogs/AmplifyEffect.html
+++ b/templates/dialogs/AmplifyEffect.html
@@ -6,7 +6,7 @@
       <input id="amount" name="amount" type="number" value="1">
       <label for="dither">Dither:&nbsp;</label>
       <div class="hflex">
-        <input id="dither" name="dither" type="checkbox">
+        <input id="dither" name="dither" type="checkbox" checked>
       </div>
     </div>
     <button id="done" type="button">Done</button>
