Add filter dialog

--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -73,17 +73,7 @@
         <option value="fadeOut">Fade Out</option>
         <option value="reverse">Reverse</option>
         <option value="resample">Resample</option>
-        <optgroup label="Filter">
-          <option value="lowpass">Lowpass</option>
-          <option value="highpass">Highpass</option>
-          <option value="bandpass">Bandpass</option>
-          <option value="notch">Notch</option>
-        </optgroup>
-        <optgroup label="EQ">
-          <option value="lowshelf">Lowshelf</option>
-          <option value="highshelf">Highshelf</option>
-          <option value="peaking">Peaking</option>
-        </optgroup>
+        <option value="filter">Filter / EQ</option>
       </select>
     </div>
     <button id="jam">Listen</button>
