--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -51,6 +51,10 @@ input {
     border-radius: 2pt;
 }
 
+input:disabled {
+    background: var(--color-bg-btn)
+}
+
 .small-input {
     width: 48pt;
 }
