--- a/templates/dialogs/FilterEffect.html
+++ b/templates/dialogs/FilterEffect.html
@@ -9,6 +9,7 @@
           <option value="highpass">Highpass</option>
           <option value="bandpass">Bandpass</option>
           <option value="notch">Notch</option>
+          <option value="allpass">Allpass</option>
         </optgroup>
         <optgroup label="EQ">
           <option value="lowshelf">Lowshelf</option>
