Add preview graph to Filter dialog

--- a/templates/dialogs/FilterEffect.html
+++ b/templates/dialogs/FilterEffect.html
@@ -1,6 +1,9 @@
 <template id="filterEffect">
   <form class="dialog vflex">
     <h3>Filter / EQ</h3>
+    <div class="hflex">
+      <canvas class="flex-grow width0" id="graph" width="512" height="128"></canvas>
+    </div>
     <div class="properties-grid">
       <label for="filterType">Type:</label>
       <select id="filterType" name="filterType">
