--- a/templates/dialogs/AmplifyEffect.html
+++ b/templates/dialogs/AmplifyEffect.html
@@ -2,8 +2,8 @@
   <form class="dialog vflex">
     <h3>Amplify</h3>
     <div class="properties-grid">
-      <label for="amount">Amount:&nbsp;</label>
-      <input id="amount" name="amount" type="number" value="1">
+      <label for="amp">Amount:&nbsp;</label>
+      <input id="amp" name="amp" type="number" value="1">
 
       <label for="dither">Dither:&nbsp;</label>
       <div class="hflex">
