Add progress to wait dialog

--- a/templates/dialogs/WaitDialog.html
+++ b/templates/dialogs/WaitDialog.html
@@ -1,5 +1,6 @@
 <template id="waitDialog">
-  <div class="hflex dialog">
+  <div class="vflex dialog">
     <span>Please wait...</span>
+    <progress></progress>
   </div>
 </template>
