Add alert dialog box

--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -170,6 +170,13 @@ label {
     justify-content: center;
 }
 
+.message-dialog {
+    max-width: 300pt;
+}
+.message-out {
+    white-space: pre-wrap;
+}
+
 /* grid */
 
 .properties-grid {
