--- a/src/ui/Theme.css
+++ b/src/ui/Theme.css
@@ -6,8 +6,7 @@ body {
     --color-bg-btn-press: #ccc;
 
     --color-bg-hl: #ecf;
-    --color-bg-hl-press: #dae;
-    --color-fg-hl: #94f;
+    --color-fg-hl: #b4f;
 
     --color-bg-alt: #fcd;
     --color-fg-alt: #d28;
