--- a/templates/CellEntry.html
+++ b/templates/CellEntry.html
@@ -29,16 +29,7 @@
         <input id="pitchEnable" type="checkbox" checked>
         <span>P</span>
       </label>
-      <div class="hflex">
-        <button id="pianoLeft">&lt;</button>
-        <form id="piano" class="vflex flex-grow hscrollable" autocomplete="off">
-          <div id="blackKeys" class="hflex">
-            <div class="keypad-half-key"></div>
-          </div>
-          <div id="whiteKeys" class="hflex"></div>
-        </form>
-        <button id="pianoRight">&gt;</button>
-      </div>
+      <piano-keyboard></piano-keyboard>
 
       <label class="label-button">
         <input id="sampleEnable" type="checkbox" checked>
