Add piano keyboard to sample edit

--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -1,5 +1,5 @@
 <template id="sampleEdit">
-  <div class="vflex">
+  <div class="vflex flex-grow">
     <div class="properties-grid">
       <label for="name">Name:&nbsp;</label>
       <div class="hflex">
@@ -76,6 +76,7 @@
         <option value="filter">Filter / EQ</option>
       </select>
     </div>
-    <button id="jam">Listen</button>
+    <div class="flex-grow"></div>
+    <piano-keyboard></piano-keyboard>
   </div>
 </template>
