Split PatternTable and PatternEdit

--- a/templates/TrackerMain.html
+++ b/templates/TrackerMain.html
@@ -28,7 +28,7 @@
     <div id="sequence" class="vflex flex-grow hide">
       <sequence-edit></sequence-edit>
       <playback-status></playback-status>
-      <pattern-table></pattern-table>
+      <pattern-edit></pattern-edit>
     </div>
     <div id="samples" class="vflex flex-grow hide">
       <samples-list></samples-list>
