Move SequenceEdit into PatternEdit

--- a/templates/PatternEdit.html
+++ b/templates/PatternEdit.html
@@ -1,5 +1,6 @@
 <template id="patternEdit">
   <div class="vflex flex-grow">
+    <sequence-edit></sequence-edit>
     <pattern-table></pattern-table>
     <div class="hflex">
       <button id="lift">
