--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -77,6 +77,15 @@
       </select>
     </div>
     <div class="flex-grow"></div>
+    <div class="hflex">
+      <div class="flex-grow"></div>
+      <span id="jamCell" class="pattern-cell">
+        <span id="pitch" class="cell-pitch"></span>
+        <span id="inst" class="cell-inst"></span>
+        <span id="effect" class="cell-effect"></span>
+      </span>
+      <div class="flex-grow"></div>
+    </div>
     <piano-keyboard></piano-keyboard>
   </div>
 </template>
