Fix wave canvas layout

--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -31,8 +31,8 @@
     </div>
 
     <div id="waveEdit" class="vflex wave-edit">
-      <div id="waveContainer" class="vflex wave-container">
-        <canvas id="wavePreview" width="1024" height="256"></canvas>
+      <div id="waveContainer" class="hflex wave-container">
+        <canvas id="wavePreview" class="flex-grow width0" width="1024" height="256"></canvas>
         <div id="selectMarkA" class="wave-mark wave-select hide"></div>
         <div id="selectMarkB" class="wave-mark wave-select hide"></div>
         <div id="selectRange" class="wave-range wave-select hide"></div>
