--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -356,6 +356,7 @@ td,
 .wave-select {
     background: var(--color-fg-hl);
 }
-.wave-loop {
+.wave-loop,
+.wave-play-mark {
     background: var(--color-fg-alt);
 }
