Improve performance of pattern changes

--- a/templates/Cell.html
+++ b/templates/Cell.html
@@ -1,7 +1,7 @@
 <template id="cellTemplate">
   <td class="pattern-cell">
-    <span id="pitch" class="cell-pitch"></span>
-    <span id="inst" class="cell-inst"></span>
-    <span id="effect" class="cell-effect"></span>
+    <span id="pitch" class="cell-pitch">...</span>
+    <span id="inst" class="cell-inst">..</span>
+    <span id="effect" class="cell-effect">...</span>
   </td>
 </template>
