--- a/templates/PatternEdit.html
+++ b/templates/PatternEdit.html
@@ -8,9 +8,9 @@
       </button>
       <div class="flex-grow"></div>
       <span id="entryCell" class="pattern-cell">
-        <span id="pitch" class="cell-pitch"></span>
-        <span id="inst" class="cell-inst"></span>
-        <span id="effect" class="cell-effect"></span>
+        <span id="pitch" class="cell-pitch">...</span>
+        <span id="inst" class="cell-inst">..</span>
+        <span id="effect" class="cell-effect">...</span>
       </span>
       <div class="flex-grow"></div>
       <button id="write">
