--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -80,9 +80,9 @@
     <div class="hflex">
       <div class="flex-grow"></div>
       <span id="jamCell" class="pattern-cell">
-        <span id="pitch" class="cell-pitch"></span>
-        <span id="inst" class="cell-inst"></span>
-        <span id="effect" class="cell-effect"></span>
+        <span id="pitch" class="cell-pitch">...</span>
+        <span id="inst" class="cell-inst">..</span>
+        <span id="effect" class="cell-effect">...</span>
       </span>
       <div class="flex-grow"></div>
     </div>
