--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -69,6 +69,11 @@ input:disabled {
     width: 80pt;
 }
 
+textarea {
+    font-family: monospace;
+    white-space: pre;
+}
+
 /* Buttons */
 
 .label-button {
