--- a/templates/ModuleProperties.html
+++ b/templates/ModuleProperties.html
@@ -34,5 +34,8 @@
 
     <label for="fileSize">File size:&nbsp;</label>
     <output id="fileSize"></output>
+
+    <div></div>
+    <div class="hflex"><button id="script">Script</button></div>
   </div>
 </template>
