--- a/templates/dialogs/AmplifyEffect.html
+++ b/templates/dialogs/AmplifyEffect.html
@@ -10,6 +10,6 @@
         <input id="dither" name="dither" type="checkbox" checked>
       </div>
     </div>
-    <button id="done">Done</button>
+    <button>Apply</button>
   </form>
 </template>
