--- a/templates/dialogs/UtilDialogs.html
+++ b/templates/dialogs/UtilDialogs.html
@@ -4,7 +4,7 @@
     <output id="message" class="message-out"></output>
     <div class="hflex">
       <div class="flex-grow"></div>
-      <button id="ok" class="show-checked">OK</button>
+      <button class="show-checked">OK</button>
     </div>
   </form>
 </template>
@@ -14,7 +14,7 @@
     <output id="message" class="message-out"></output>
     <div class="hflex">
       <div class="flex-grow"></div>
-      <button id="ok" class="show-checked">OK</button>
+      <button class="show-checked">OK</button>
       <button id="cancel" type="button">Cancel</button>
     </div>
   </form>
@@ -28,7 +28,7 @@
     </div>
     <div class="hflex">
       <div class="flex-grow"></div>
-      <button id="ok" class="show-checked">OK</button>
+      <button class="show-checked">OK</button>
       <button id="cancel" type="button">Cancel</button>
     </div>
   </form>
