--- a/templates/dialogs/FilterEffect.html
+++ b/templates/dialogs/FilterEffect.html
@@ -50,6 +50,6 @@
         <input id="dither" name="dither" type="checkbox" checked>
       </div>
     </div>
-    <button id="done">Done</button>
+    <button>Apply</button>
   </form>
 </template>
