no spellcheck no autocap

--- a/templates/dialogs/ScriptDialog.html
+++ b/templates/dialogs/ScriptDialog.html
@@ -2,7 +2,7 @@
   <form class="vflex dialog">
     <h3>Enter script</h3>
     <code><output id="info" name="info" class="message-out"></output></code>
-    <textarea id="script" cols="40" rows="6"></textarea>
+    <textarea id="script" cols="40" rows="6" spellcheck="false" autocapitalize="off"></textarea>
     <button>Run</button>
   </form>
 </template>
