--- a/templates/PatternEdit.html
+++ b/templates/PatternEdit.html
@@ -11,6 +11,22 @@
         Speed:&nbsp;
         <input id="speed" type="number" class="small-input" value="6" autocomplete="off">
       </label>
+      <div class="flex-grow"></div>
+      <div id="selectTools" class="hide hflex">
+        <button id="cut">
+          <inline-svg class="icon" src="content-cut.svg"></inline-svg>
+        </button>
+        <button id="copy">
+          <inline-svg class="icon" src="content-copy.svg"></inline-svg>
+        </button>
+      </div>
+      <button id="paste">
+        <inline-svg class="icon" src="content-paste.svg"></inline-svg>
+      </button>
+      <label class="label-button">
+        <input id="select" type="checkbox">
+        <span><inline-svg class="icon" src="selection.svg"></inline-svg></span>
+      </label>
     </div>
     <pattern-table></pattern-table>
     <div class="hflex">
