--- a/templates/PatternEdit.html
+++ b/templates/PatternEdit.html
@@ -3,13 +3,13 @@
     <sequence-edit></sequence-edit>
     <div class="hflex">
       <label>
-        Tempo:&nbsp;
-        <input id="tempo" type="number" class="small-input" value="125" autocomplete="off">
+        Tmp:&nbsp;
+        <input id="tempo" type="number" class="tempo-input" value="125" autocomplete="off">
       </label>
       &nbsp;
       <label>
-        Speed:&nbsp;
-        <input id="speed" type="number" class="small-input" value="6" autocomplete="off">
+        /&nbsp;
+        <input id="speed" type="number" class="speed-input" value="6" autocomplete="off">
       </label>
       <div class="flex-grow"></div>
       <div id="selectTools" class="hide hflex">
