Download sample WAVs

--- a/templates/SampleEdit.html
+++ b/templates/SampleEdit.html
@@ -24,6 +24,9 @@
           <input id="file" type="file" accept="audio/*" autocomplete="off">
           <span><inline-svg class="icon" src="folder-open.svg"></inline-svg></span>
         </label>
+        <button id="save">
+          <inline-svg class="icon" src="download.svg"></inline-svg>
+        </button>
         &nbsp;
         <label for="sampleRate">Resample:&nbsp;</label>
         <input id="sampleRate" type="number" class="med-input" value="16574.27">
