--- a/templates/PatternEdit.html
+++ b/templates/PatternEdit.html
@@ -3,15 +3,10 @@
     <sequence-edit></sequence-edit>
     <div class="hflex">
       <div id="playbackStatus" class="hflex">
-        <label>
-          Tempo:&nbsp;
-          <input id="tempo" type="number" class="small-input" value="125" autocomplete="off">
-        </label>
-        &nbsp;
-        <label>
-          Speed:&nbsp;
-          <input id="speed" type="number" class="small-input" value="6" autocomplete="off">
-        </label>
+        <label for="tempo">Tempo:</label>
+        <input id="tempo" type="number" class="small-input" value="125" autocomplete="off">
+        <label for="speed">Speed:</label>
+        <input id="speed" type="number" class="small-input" value="6" autocomplete="off">
       </div>
       <div class="flex-grow"></div>
       <div id="selectTools" class="hide hflex">
