--- a/templates/dialogs/AmplifyEffect.html
+++ b/templates/dialogs/AmplifyEffect.html
@@ -2,10 +2,10 @@
   <form class="dialog vflex">
     <h3>Amplify</h3>
     <div class="properties-grid">
-      <label for="amp">Amount:&nbsp;</label>
+      <label for="amp">Amount:</label>
       <input id="amp" name="amp" type="number" value="1">
 
-      <label for="dither">Dither:&nbsp;</label>
+      <label for="dither">Dither:</label>
       <div class="hflex">
         <input id="dither" name="dither" type="checkbox" checked>
       </div>
