--- a/templates/dialogs/FilterEffect.html
+++ b/templates/dialogs/FilterEffect.html
@@ -21,31 +21,31 @@
         </optgroup>
       </select>
 
-      <label for="freqEnvelope">Envelope:&nbsp;</label>
+      <label for="freqEnvelope">Envelope:</label>
       <div class="hflex">
         <input id="freqEnvelope" name="freqEnvelope" type="checkbox">
       </div>
 
-      <label for="frequency">Frequency:&nbsp;</label>
+      <label for="frequency">Frequency:</label>
       <div class="hflex">
         <input id="frequency" name="frequency" type="number" class="small-input" value="350">
         &nbsp;Hz
         <div class="flex-grow"></div>
-        <label for="freqEnd">&nbsp;To:&nbsp;</label>
+        <label for="freqEnd">To:</label>
         <input id="freqEnd" name="freqEnd" type="number" class="small-input" value="350">
         &nbsp;Hz
       </div>
 
-      <label for="q">Q:&nbsp;</label>
+      <label for="q">Q:</label>
       <input id="q" name="q" type="number" value="1">
 
-      <label for="gain">Gain:&nbsp;</label>
+      <label for="gain">Gain:</label>
       <div class="hflex">
         <input id="gain" name="gain" type="number" value="2">
         &nbsp;dB
       </div>
 
-      <label for="dither">Dither:&nbsp;</label>
+      <label for="dither">Dither:</label>
       <div class="hflex">
         <input id="dither" name="dither" type="checkbox" checked>
       </div>
