--- a/templates/dialogs/UtilDialogs.html
+++ b/templates/dialogs/UtilDialogs.html
@@ -23,8 +23,8 @@
   <form class="vflex dialog">
     <h3 id="title"></h3>
     <div class="hflex">
-      <span id="prompt"></span>&nbsp;
-      <input type="number" class="med-input">
+      <label id="prompt" for="value"></label>
+      <input id="value" type="number" class="med-input">
     </div>
     <div class="hflex">
       <div class="flex-grow"></div>
