--- a/templates/ModuleProperties.html
+++ b/templates/ModuleProperties.html
@@ -1,14 +1,13 @@
 <template id="moduleProperties">
   <div class="properties-grid">
-    <label for="title">Title:&nbsp;</label>
+    <label for="title">Title:</label>
     <div class="hflex">
       <input id="title" maxlength="20" autocomplete="off">
     </div>
 
-    <label for="channelCount">Channels:&nbsp;</label>
+    <label for="channelCount">Channels:</label>
     <div class="hflex">
       <output id="channelCount"></output>
-      &nbsp;
       <button id="delChannels">
         <inline-svg class="icon" src="minus.svg"></inline-svg>
       </button>
@@ -17,22 +16,21 @@
       </button>
     </div>
 
-    <label for="sampleCount">Samples:&nbsp;</label>
+    <label for="sampleCount">Samples:</label>
     <output id="sampleCount"></output>
 
-    <label for="patternCount">Patterns:&nbsp;</label>
+    <label for="patternCount">Patterns:</label>
     <div class="hflex">
       <output id="patternCount"></output>
-      &nbsp;
       <button id="patternZap">
         <inline-svg class="icon" src="playlist-remove.svg"></inline-svg>
       </button>
     </div>
 
-    <label for="sequenceCount">Length:&nbsp;</label>
+    <label for="sequenceCount">Length:</label>
     <output id="sequenceCount"></output>
 
-    <label for="fileSize">File size:&nbsp;</label>
+    <label for="fileSize">File size:</label>
     <output id="fileSize"></output>
   </div>
 </template>
