--- a/templates/TrackerMain.html
+++ b/templates/TrackerMain.html
@@ -23,7 +23,7 @@
       <div class="vspace"></div>
       <module-properties></module-properties>
       <div class="flex-grow"></div>
-      <em>Version:&nbsp;<span id="version"></span></em>
+      <em>Version:&nbsp;<code id="version"></code></em>
     </div>
     <div id="sequence" class="vflex flex-grow hide">
       <pattern-edit></pattern-edit>
