channel/pattern count padding

--- a/templates/ModuleProperties.html
+++ b/templates/ModuleProperties.html
@@ -7,7 +7,7 @@
 
     <label for="channelCount">Channels:</label>
     <div class="hflex">
-      <output id="channelCount"></output>
+      <output id="channelCount" class="small-input"></output>
       <button id="delChannels">
         <inline-svg class="icon" src="minus.svg"></inline-svg>
       </button>
@@ -21,7 +21,7 @@
 
     <label for="patternCount">Patterns:</label>
     <div class="hflex">
-      <output id="patternCount"></output>
+      <output id="patternCount" class="small-input"></output>
       <button id="patternZap">
         <inline-svg class="icon" src="playlist-remove.svg"></inline-svg>
       </button>
