--- a/templates/CellEntry.html
+++ b/templates/CellEntry.html
@@ -33,9 +33,9 @@
         <option>8: Panning</option>
         <option>9: Offset</option>
         <option>A: Volume Slide</option>
-        <option>B: Position Jump</option>
+        <option>B: Pos. Jump</option>
         <option selected>C: Volume</option>
-        <option>D: Pattern Break</option>
+        <option>D: Pat. Break</option>
         <option>E: Extended</option>
         <option>F: Tempo</option>
       </select>
