--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -26,7 +26,7 @@
     flex-shrink: 0;
 }
 .hide {
-    display: none;
+    display: none !important;
 }
 
 .pos-relative {
@@ -379,6 +379,11 @@ td,
     background: var(--color-fg);
     color: var(--color-bg);
     border-color: var(--color-bg);
+}
+
+.hex-grid {
+	display: grid;
+	grid: auto / 1fr 1fr 1fr 1fr;
 }
 
 /* wave editor */
