--- a/src/ui/WebApp.css
+++ b/src/ui/WebApp.css
@@ -26,7 +26,7 @@ html, body {
     overscroll-behavior: none;
 }
 
-body {
+body, select {
     user-select: none;
     -webkit-user-select: none;
 }
