Require Firefox 102; close #75

--- a/src/ui/WebApp.css
+++ b/src/ui/WebApp.css
@@ -4,7 +4,7 @@
 }
 * {
     margin: 0;
-    contain: content; /* for performance only, don't depend on this! */
+    contain: content;
 }
 input, button, textarea, select {
     font: inherit;
