--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -76,6 +76,7 @@ hr {
 
 body {
     display: flex;
+    flex-direction: column;
 
     font-family: 'Iosevka Aile Custom Web', system-ui, sans-serif;
     font-size: 16px;
@@ -85,14 +86,6 @@ body {
     background: var(--color-bg);
     color: var(--color-fg);
     accent-color: var(--color-fg-hl);
-}
-
-.base {
-    flex: 1 0 0;
-    overflow: hidden;
-    z-index: 0;
-    display: flex;
-    flex-direction: column;
 }
 
 input {
@@ -225,24 +218,20 @@ label {
     width: 100pt;
 }
 
-.dialog {
+dialog {
+    display: flex;
+    flex-direction: column;
+
+    margin: auto;
     background: var(--color-bg);
     padding: 12pt;
+    border: 1px solid var(--color-fg);
     border-radius: 8pt;
-    box-shadow: var(--color-fg) 0 0 30pt;
+    box-shadow: black 0 0 30pt;
 }
 
-.dialog-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+::backdrop {
     background: rgba(0, 0, 0, 0.2);
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .message-dialog {
