--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -224,6 +224,7 @@ dialog {
 
     margin: auto;
     background: var(--color-bg);
+    color: var(--color-fg);
     padding: 12pt;
     border: 1px solid var(--color-fg);
     border-radius: 8pt;
