All divs and forms are vflex by default

--- a/src/ui/WebApp.css
+++ b/src/ui/WebApp.css
@@ -13,6 +13,13 @@ input, button, textarea, select {
 select {
     appearance: menulist-button;
 }
+div, body, form {
+    display: flex;
+    flex-direction: column;
+}
+.custom-element {
+    display: contents;
+}
 
 html, body {
     width: 100%;
