--- a/src/ui/Style.css
+++ b/src/ui/Style.css
@@ -134,6 +134,7 @@ select,
 .label-button span {
     min-width: 2.5em;
     min-height: 2.5em;
+    padding: 0 0.4em;
 
     display: inline-flex;
     justify-content: center;
